syntax = "proto3";

option csharp_namespace = "ProductionStructure.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "Common/common.proto";
import "Common/entities.proto";

service Site{
	rpc CreateSite (CreateSiteRequest) returns (SiteDTO);
	rpc GetSite (GetRequest) returns (NullableSiteDTO);
	rpc GetAllSites (google.protobuf.Empty) returns (Sites);
	rpc UpdateSite (SiteDTO) returns (google.protobuf.Empty);
	rpc DeleteSite (DeleteRequest) returns (google.protobuf.Empty);
}

message CreateSiteRequest{
	string name = 1;
	Location location = 2;
}